--- a/src/Pages/Steps/styles.css
+++ b/src/Pages/Steps/styles.css
@@ -9,7 +9,7 @@
     margin: auto;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 .step-features{
     width: 100%;
@@ -130,6 +130,9 @@
         padding: 20px;
         border-radius: 20px;
         box-shadow: 1px 5px 10px 3px rgba(0, 0, 0, 0.267);
+    }
+    .steps-container{
+        flex-wrap: wrap;
     }
 }
 @media(max-width:700px){
